# receiver

./: .gitattributes  .gitignore  CONTRIBUTING.md  Makefile  README.md  io.github.meehow.Receiver.yml  meson.build  meson_options.txt  messages.mo
.github/workflows/: build.yml
data/: io.github.meehow.Receiver.desktop  io.github.meehow.Receiver.gschema.xml  io.github.meehow.Receiver.metainfo.xml  io.github.meehow.Receiver.search-provider.ini  io.github.meehow.Receiver.service.in  snap-banner.html
data/appimage/: receiver-env.sh
debian/: changelog  control  copyright
po/: LINGUAS  POTFILES  ab.po  af.po  ak.po  am.po  an.po  ang.po  ar.po  as.po  ast.po  az.po  az_IR.po  bal.po  be.po  be@latin.po  bem.po  bg.po  bn.po  bn_IN.po  bo.po  br.po  brx.po  bs.po  ca.po  ca@valencia.po  ckb.po  crh.po  cs.po  cy.po  da.po  de.po  de_CH.po  dv.po  dz.po  el.po  eo.po  es.po  et.po  eu.po  (+102 more)
snap/: snapcraft.yaml
src/: application.vala  main.vala
src/models/: station.vala
src/services/: app_state.vala  history_store.vala  image_loader.vala  lastfm.vala  mpris.vala  player.vala  scrobbler.vala  search_provider.vala  song_downloader.vala  station_store.vala
src/tui/: main.vala
src/utils/: languages.vala  metadata_extractor.vala  metadata_parser.vala
src/widgets/: download_button.vala  favourites_page.vala  history_page.vala  home_screen.vala  player_bar.vala  station_info_page.vala  station_list.vala  window.vala
subprojects/ytdl/: .gitignore  Makefile  meson.build
subprojects/ytdl/data/: yt.solver.lib.js  ytdl.gresource.xml
subprojects/ytdl/src/: main.vala  ytdl.vala
vapi/: ncursesw.vapi  posix-extras.vapi
